# pycam

./: LICENSE  Makefile  README.md  build.py  pycam.py  pyproject.toml  requirements-dev.txt  requirements_freeze.txt  setup.py
cython/: geometry.cpp  geometry.pxd  geometry.pyx
examples/: basic_usage.py
notebooks/: cython_test.ipynb  dogbone_test.bak000.dxf  dogbone_test.dxf  oblong_rectangle.dxf  prototype.ipynb  ~dogbone_test.dxf
src/: geom.c  geom.cpp  geom.hpp  geom2d.py  geometry.c  geometry.cpp  geometry.pxd  geometry.pyx  intersection.cpp  intersection.hpp  math2d.c  math2d.cpp  math2d.h  math2d.hpp  pycam.cpp  pycam.hpp  test  test.cpp
src/cpp/: geom.cpp  geom.hpp  intersection.cpp  intersection.hpp  math2d.hpp  pycam.cpp  pycam.hpp  sorting.hpp  test  test.cpp
src/pycam/: __init__.py
src/pycam.egg-info/: PKG-INFO  SOURCES.txt
src/pycam/core/: __init__.py
src/pycam/gcode/: types.py
src/pycam/gcode/program/: program.py
tests/: test_basic.py
